objects/Analise_de_credito__c.object
<CustomObject>
    <fields>
        <fullName>Abril__c</fullName>
        <inlineHelpText>Valor em R$</inlineHelpText>
        <label>Abril</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Absolut_ca__c</fullName>
        <label>Absolut (CA)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Absolut_preco__c</fullName>
        <label>Absolut preço</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agencia_Cidade_2__c</fullName>
        <label>Agência / Cidade</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agencia_cidade_1__c</fullName>
        <label>Agência / Cidade</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agosto__c</fullName>
        <inlineHelpText>Valor em R$</inlineHelpText>
        <label>Agosto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Analise_Balanco__c</fullName>
        <label>Análise de Balanço</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Favorável</fullName>
                </value>
                <value>
                    <fullName>Sem análise</fullName>
                </value>
                <value>
                    <fullName>Não favorável</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Analise_balan_pts__c</fullName>
        <formula>IF( ISPICKVAL(Analise_Balanco__c, &quot;Favorável&quot;),20,
IF(ISPICKVAL(Analise_Balanco__c,&quot;Sem análise&quot;),-5,-10))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Análise de balanço - Pontos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ano_1__c</fullName>
        <defaultValue>text(YEAR(today()) -1)</defaultValue>
        <label>Ano</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ano_2__c</fullName>
        <defaultValue>text(YEAR(TODAY())-2)</defaultValue>
        <label>Ano</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ano_3__c</fullName>
        <defaultValue>text(YEAR(TODAY())-3)</defaultValue>
        <label>Ano</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ano__c</fullName>
        <label>Ano</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Antecipado_A_Vista_Compras__c</fullName>
        <label>Antecipado / A Vista - Compras %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Antecipado_A_Vista_Vendas__c</fullName>
        <label>Antecipado / A Vista - Vendas %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Area_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>An_lises_de_cr_dito</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assoc_030_Cargil_Alimentos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assoc (030) Cargil (Alimentos)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assoc_053_Salton_Bebidas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assoc (053) Salton (Bebidas)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assoc_055_Diageo_bebidas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assoc (055) Diageo (Bebidas)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assoc_132_Moet_bebidas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assoc (132) Moet (Bebidas)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associado_01__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Associado 01</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associado_02__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Associado 02</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associado_03__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Associado 03</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associado_CISP_desde_Pontos__c</fullName>
        <formula>IF(YEAR( TODAY()) - YEAR( Associado_cisp_desde__c ) &gt; 5 , 30 , 
IF(AND((YEAR( TODAY()) - YEAR(Associado_cisp_desde__c) ) &lt;= 5 , (YEAR( TODAY()) - YEAR(Associado_cisp_desde__c) ) &gt; 3),20,
IF(AND((YEAR( TODAY()) - YEAR(Associado_cisp_desde__c) ) &lt;= 3 , (YEAR( TODAY()) - YEAR(Associado_cisp_desde__c) ) &gt; 1),15,10)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Associado CISP desde - Pontos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Associado_cisp_desde__c</fullName>
        <label>Associado CISP desde</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>At_30_dias_Vendas__c</fullName>
        <label>Até 30 dias - Vendas %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ate_30_dias_Compras__c</fullName>
        <label>Até 30 dias - Compras %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Atividade_principal__c</fullName>
        <inlineHelpText>Principais produtos e/ou serviços.</inlineHelpText>
        <label>Atividade principal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ballantine_s_pre_o__c</fullName>
        <label>Ballantine&apos;s preço</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ballantines_ca__c</fullName>
        <label>Ballantine&apos;s (CA)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Banco_2__c</fullName>
        <label>Banco</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banco__c</fullName>
        <label>Banco</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banco_endiv2__c</fullName>
        <label>Banco</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banco_endiv3__c</fullName>
        <label>Banco</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banco_endiv__c</fullName>
        <label>Banco</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_Limit__c</fullName>
        <label>Calculated Limit</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculo_parcial_limite__c</fullName>
        <label>Cálculo parcial limite</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capital_social__c</fullName>
        <inlineHelpText>Valor em R$.</inlineHelpText>
        <label>Capital social (R$)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cheque_sem_Fundo_Pontos__c</fullName>
        <formula>IF( Cheque_sem_Fundo__c  &gt; 10, -20 , 
IF(AND ( Cheque_sem_Fundo__c &gt;7, Cheque_sem_Fundo__c &lt;10),-15, 
IF(AND (Cheque_sem_Fundo__c &gt;5, Cheque_sem_Fundo__c &lt;7),-10, 
IF(AND (Cheque_sem_Fundo__c &gt;1, Cheque_sem_Fundo__c &lt;5),-5,0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cheque sem Fundo - Pontos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cheque_sem_Fundo__c</fullName>
        <label>Cheque sem Fundo</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chivas_ca__c</fullName>
        <label>Chivas (CA)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chivas_preco__c</fullName>
        <label>Chivas preço</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Coface_Limit__c</fullName>
        <label>Coface Limit</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comentarios_Consideracoes_finais__c</fullName>
        <label>Comentários do Analista de Crédito</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conta__c</fullName>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Análises de crédito</relationshipLabel>
        <relationshipName>Analises_de_credito</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Current_Limit__c</fullName>
        <label>Current Limit</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dat_fund_Pts__c</fullName>
        <formula>IF(YEAR( TODAY()) - YEAR(Data_de_fundacao__c) &gt; 5 , 30 , 
    IF(AND((YEAR( TODAY()) - YEAR(Data_de_fundacao__c) ) &lt; 5 , (YEAR( TODAY()) - YEAR(Data_de_fundacao__c) ) &gt; 3),20,5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data de fundação - Pontos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_de_fundacao__c</fullName>
        <label>Data de fundação</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debito_atual_01__c</fullName>
        <label>Débito atual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Debito_atual_02__c</fullName>
        <label>Débito atual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Debito_atual_03__c</fullName>
        <label>Débito atual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Debito_atual_cargil__c</fullName>
        <label>Débito atual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Debito_atual_diageo__c</fullName>
        <label>Débito atual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Debito_atual_moet__c</fullName>
        <label>Débito atual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Debito_atual_salton__c</fullName>
        <label>Débito atual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dezembro__c</fullName>
        <inlineHelpText>Valor em R$</inlineHelpText>
        <label>Dezembro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Empresas_coligadas__c</fullName>
        <label>Empresas coligadas</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Entre_31_e_60_dias_Compras__c</fullName>
        <label>Entre 31 e 60 dias - Compras %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Entre_31_e_60_dias_Vendas__c</fullName>
        <label>Entre 31 e 60 dias - Vendas %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Entre_61_e_90_dias_Compras__c</fullName>
        <label>Entre 61 e 90 dias - Compras %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Entre_61_e_90_dias_Vendas__c</fullName>
        <label>Entre 61 e 90 dias - Vendas %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fat_anual_pts__c</fullName>
        <formula>IF( Faturamento_anual__c &gt;= 2400000,35,15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Faturamento anual - Pontos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Faturamento_anual__c</fullName>
        <label>Faturamento anual</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fevereiro__c</fullName>
        <inlineHelpText>Valor em R$</inlineHelpText>
        <label>Fevereiro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fornecedor_1__c</fullName>
        <label>Fornecedor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fornecedor_2__c</fullName>
        <label>Fornecedor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fornecedor_3__c</fullName>
        <label>Fornecedor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Garantia_endiv1__c</fullName>
        <label>Garantia</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Garantia_endiv2__c</fullName>
        <label>Garantia</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Garantia_endiv3__c</fullName>
        <label>Garantia</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Garantias_Pts__c</fullName>
        <formula>IF(  ISPICKVAL(Garantias__c,&quot;Sem garantias&quot; ), 0, 10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Garantias - Pontos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Garantias__c</fullName>
        <label>Garantias</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Com garantias</fullName>
                </value>
                <value>
                    <fullName>Sem garantias</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Greater_Exposure__c</fullName>
        <label>Greater Exposure</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Greater_Exposure_month__c</fullName>
        <label>Greater Exposure month</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Havana_Club_ca__c</fullName>
        <label>Havana Club (CA)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Havana_Club_preco__c</fullName>
        <label>Havana Club preço</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Higher_Quarter_Value__c</fullName>
        <label>Higher Quarter Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Informacoes_de_Mercado__c</fullName>
        <formula>Sugestao_parcial_de_limite2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Informações de Mercado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Informacoes_internas__c</fullName>
        <formula>Sugestao_parcial_de_limite__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Informações internas</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Submiter__c</fullName>
        <label>Initial Submiter</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jameson_ca__c</fullName>
        <label>Jameson (CA)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jameson_preco__c</fullName>
        <label>Jameson preço</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Janeiro__c</fullName>
        <inlineHelpText>Valor em R$</inlineHelpText>
        <label>Janeiro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Julho__c</fullName>
        <inlineHelpText>Valor em R$</inlineHelpText>
        <label>Julho</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Junho__c</fullName>
        <inlineHelpText>Valor em R$</inlineHelpText>
        <label>Junho</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_BR_CurrentStep__c</fullName>
        <label>LAT_BR_CurrentStep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_BR_Initial_Approval_Submiter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initial Approval Submiter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>An_lises_de_cr_dito2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_BR_Regional_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>An_lises_de_cr_dito1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_BR_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ativo</fullName>
                </value>
                <value>
                    <fullName>Inativo</fullName>
                </value>
                <value>
                    <fullName>Em aprovação</fullName>
                </value>
                <value>
                    <fullName>Em Preenchimento</fullName>
                </value>
                <value>
                    <fullName>Reprovado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Limite_de_credito_01__c</fullName>
        <label>Limite de crédito</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Limite_de_credito_02__c</fullName>
        <label>Limite de crédito</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Limite_de_credito_03__c</fullName>
        <label>Limite de crédito</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Limite_de_credito_cargil__c</fullName>
        <label>Limite de crédito</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Limite_de_credito_diageo__c</fullName>
        <label>Limite de crédito</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Limite_de_credito_medio__c</fullName>
        <formula>( Informacoes_de_Mercado__c +  Informacoes_internas__c ) / 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Limite de crédito médio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Limite_de_credito_moet__c</fullName>
        <label>Limite de crédito</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Limite_de_credito_salton__c</fullName>
        <label>Limite de crédito</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Limite_necessario__c</fullName>
        <formula>Previsao_mes_ate_junho__c *( Prazo__c / 30)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Limite necessário</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maio__c</fullName>
        <inlineHelpText>Valor em R$</inlineHelpText>
        <label>Maio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maior_acumulo_01__c</fullName>
        <label>Maior acúmulo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maior_acumulo_02__c</fullName>
        <label>Maior acúmulo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maior_acumulo_03__c</fullName>
        <label>Maior acúmulo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maior_acumulo_cargil__c</fullName>
        <label>Maior acúmulo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maior_acumulo_diageo__c</fullName>
        <label>Maior acúmulo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maior_acumulo_moet__c</fullName>
        <label>Maior acúmulo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maior_acumulo_salton__c</fullName>
        <label>Maior acúmulo</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marco__c</fullName>
        <inlineHelpText>Valor em R$</inlineHelpText>
        <label>Março</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Media_de_Atraso_Pontos__c</fullName>
        <formula>IF( Media_de_Atraso__c = 0, 35 ,
IF( Media_de_Atraso__c &lt;= 5,25,
IF(AND ( Media_de_Atraso__c &gt;5, Media_de_Atraso__c &lt;=10),15,
IF(AND ( Media_de_Atraso__c &gt;15, Media_de_Atraso__c &lt;=20),5,0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Média de Atraso Pontos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Media_de_Atraso__c</fullName>
        <description>Media de atraso nos pagamentos, em dias.</description>
        <inlineHelpText>Media de atraso nos pagamentos, em dias.</inlineHelpText>
        <label>Média de Atraso</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Media_de_acumulos__c</fullName>
        <formula>IF(Valor_da_divisao_da_media__c &lt;&gt; 0,

( IF( Assoc_055_Diageo_bebidas__c, Maior_acumulo_diageo__c,0) +  IF( Assoc_132_Moet_bebidas__c, Maior_acumulo_moet__c,0) +  IF( Assoc_053_Salton_Bebidas__c, Maior_acumulo_salton__c,0) +  IF( Assoc_030_Cargil_Alimentos__c, Maior_acumulo_cargil__c,0) )/ Valor_da_divisao_da_media__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Média (Acúmulos)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meses_at_junho__c</fullName>
        <formula>IF( MONTH(TODAY()) = 1, 5, 
IF( MONTH(TODAY()) = 2, 4, 
IF( MONTH(TODAY()) = 3, 3, 
IF( MONTH(TODAY()) = 4, 2, 
IF( MONTH(TODAY()) = 5, 1, 
IF( MONTH(TODAY()) = 6, 1, 
IF( MONTH(TODAY()) = 7, 11, 
IF( MONTH(TODAY()) = 8, 10, 
IF( MONTH(TODAY()) = 9, 9, 
IF( MONTH(TODAY()) = 10, 8, 
IF( MONTH(TODAY()) = 11, 7,1 
)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meses até junho</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Metros_quadrados__c</fullName>
        <label>M²</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Modalidade_endiv1__c</fullName>
        <label>Modalidade</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modalidade_endiv2__c</fullName>
        <label>Modalidade</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modalidade_endiv3__c</fullName>
        <label>Modalidade</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Montilla_ca__c</fullName>
        <label>Montilla (CA)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Montilla_preco__c</fullName>
        <label>Montilla preço</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>N_Funcionarios__c</fullName>
        <label>Nº Funcionários</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_de_funcionarios_incluindo_filiais__c</fullName>
        <label>Nº de funcionários (incluindo filiais)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Natu_Nobilis_ca__c</fullName>
        <label>Natu Nobilis (CA)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Natu_Nobilis_preco__c</fullName>
        <label>Natu Nobilis preço</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Necessary_Limit__c</fullName>
        <formula>(Higher_Quarter_Value__c / 90) *  Special_term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Necessary Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nome_Associado_01__c</fullName>
        <label>Nome Associado 01</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_Associado_02__c</fullName>
        <label>Nome Associado 02</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_Associado_03__c</fullName>
        <label>Nome Associado 03</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Novembro__c</fullName>
        <inlineHelpText>Valor em R$</inlineHelpText>
        <label>Novembro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Observacoes__c</fullName>
        <label>Comentários do Executivo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Orlof_preco__c</fullName>
        <label>Orlof preço</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Orloff__c</fullName>
        <label>Orloff (CA)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outros_ca__c</fullName>
        <label>Outros (CA)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outros_preco__c</fullName>
        <label>Outros preço</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outubro__c</fullName>
        <inlineHelpText>Valor em R$</inlineHelpText>
        <label>Outubro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Passport_ca__c</fullName>
        <label>Passport (CA)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passport_preco__c</fullName>
        <label>Passport preço</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Patrimonio_liquido__c</fullName>
        <label>Patrimônio liquido (R$)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pendencia_Financeira_Pontos__c</fullName>
        <formula>IF( Pendencia_Financeira__c &gt; 5, -15 , 
IF(AND ( Pendencia_Financeira__c &gt;3, Pendencia_Financeira__c &lt;6),-10, 
IF(AND (Pendencia_Financeira__c &gt;1, Pendencia_Financeira__c &lt;3),-5, 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pendência Financeira - Pontos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pendencia_Financeira__c</fullName>
        <label>Pendência Financeira</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Perrie_Jouet_ca__c</fullName>
        <label>Perrier Jouet (CA)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Perrier_Jouet_preco__c</fullName>
        <label>Perrier Jouet preço</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pontos_obtidos2__c</fullName>
        <formula>Temp_quad_soc_pts__c +   Garantias_Pts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pontos obtidos2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pontos_obtidos__c</fullName>
        <formula>Analise_balan_pts__c  +    Dat_fund_Pts__c  +    Fat_anual_pts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pontos obtidos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prazo__c</fullName>
        <label>Prazo máximo de pagamento</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prazo_normal_de_pagamento__c</fullName>
        <label>Prazo normal de pagamento</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>